load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

exports_files([
    "helm.bzl",
    "repo.bzl",
    "providers.bzl",
])

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

gazelle_binary(
    name = "gazelle-all",
    languages = DEFAULT_LANGUAGES + [],
)

# gazelle:proto package
gazelle(
    name = "gazelle",
    gazelle = ":gazelle-all",
)
