load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "helmlock_lib",
    srcs = ["main.go"],
    importpath = "github.com/dbanetto/rules_helm/cmd/helmlock",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_binary(
    name = "helmlock",
    embed = [":helmlock_lib"],
    visibility = ["//visibility:public"],
)
