load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "helmlock_lib",
    srcs = ["main.go"],
    importpath = "github.com/dbanetto/rules_helm/cmd/helmlock",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_containerregistry//pkg/authn",
        "@com_github_google_go_containerregistry//pkg/name",
        "@com_github_google_go_containerregistry//pkg/v1:pkg",
        "@com_github_google_go_containerregistry//pkg/v1/remote",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_binary(
    name = "helmlock",
    embed = [":helmlock_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_test(
    name = "helmlock_test",
    srcs = ["main_test.go"],
    embed = [":helmlock_lib"],
    pure = "on",
)
